# 20260530-data-workshop

./: .gitignore  README.md  hints_from_colleagues.md  index.html  leaderboard.json  main.ipynb  pyproject.toml  train_submission.py  workshop_generation_talk.md
.github/scripts/: score_and_update_leaderboard.py  verify_team_manifest.py
.github/tournament/: team_allowlist.json
.github/tournament/public_keys/: team_code_cert.pem
.github/workflows/: deploy-leaderboard-pages.yml  deploy-pages.yml  run-cleaner.yml  trusted-score.yml  validate-submission-files.yml
admin/docs/: live-state.md
admin/opentofu/: .gitignore  .terraform.lock.hcl  README.md  main.tf  mise.toml  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
config/: team_allowlist.json
config/public_keys/: cleaned_output_cert.pem  hidden_labels_cert.pem  tournament_ca_cert.pem
config/team_certs/: team-01.cert.pem  team-02.cert.pem  team-03.cert.pem  team-04.cert.pem  team-05.cert.pem  team-06.cert.pem  team-07.cert.pem  team-08.cert.pem  team-09.cert.pem  team-10.cert.pem  team-11.cert.pem  team-12.cert.pem  team-13.cert.pem  team-14.cert.pem  team-15.cert.pem  team-16.cert.pem  team-17.cert.pem  team-18.cert.pem  team-19.cert.pem  team-20.cert.pem
data/: test_labels.csv.cms
demo_notebook/: demo_with_explaination.ipynb
submission/: clean.py  clean.py.cms  encrypt_submission.ps1  encrypt_submission.sh  manifest.example.json  manifest.json  manifest.sig
