[project]
name = "dataclean-workshop"
version = "0.1.0"
description = "HKPUG data cleaning tournament starter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv]
package = false
